assets/css/style.css
/* ... */
/* Large devices */
@media (max-width: 1199px) {
  .hero-style1 {
    padding: 155px 0 80px;
  }
  .hero-title {
    font-size: 80px;
  }
}
/* Medium devices */
@media (max-width: 991px) {
  .hero-title {
    font-size: 70px;
  }
  .hero-style1 .hero-year-tag {
    margin-top: 40px;
  }
  .hero-style1 .hero-title {
    letter-spacing: -1.2px;
  }
}
/* Small devices */
@media (max-width: 767px) {
  .hero-style1 {
    padding: 140px 0 80px;
  }
  .hero-title {
    font-size: 56px;
  }
}
/* Extra small devices */
@media (max-width: 575px) {
  .hero-style1 .hero-title {
    letter-spacing: normal;
  }
  .hero-title {
    font-size: 39px;
    letter-spacing: normal;
  }
}
/* Extra small devices */
@media (max-width: 375px) {
  .hero-title {
    font-size: 34px;
  }
}
/* Hero 2 ---------------------------------- */
.hero-2 {
  background: var(--title-color);
}
.hero-2 .hero-2-thumb {
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
  height: 744px;
}
.hero-2 .hero-2-thumb img {
  height: 744px;
  object-fit: cover;
  width: 100%;
  display: block;
}

.hero-style2 {
  padding: 208px 0 72px;
}
.hero-style2 .hero-title {
  font-size: 100px;
}
.hero-style2 .hero-text {
  margin-top: 26px;
  margin-bottom: 40px;
}
.hero-style2 .btn {
  margin-bottom: 43px;
}
.hero-style2 .hero-contact-wrap {
  color: var(--white-color);
  font-family: var(--title-font);
  max-width: 306px;
  display: inline-block;
  margin-top: 30px;
}
.hero-style2 .hero-contact-wrap a {
  color: var(--white-color);
}
.hero-style2 .hero-contact-wrap:not(:last-child) {
  margin-right: 18px;
}

/* Extra large devices */
@media (max-width: 1500px) {
  .hero-2 .hero-2-thumb {
    width: 900px;
  }
}
/* Medium Large devices */
@media (max-width: 1399px) {
  .hero-style2 .hero-title {
    font-size: 80px;
  }
  .hero-2 .hero-2-thumb {
    height: 676px;
  }
  .hero-2 .hero-2-thumb img {
    height: 676px;
  }
}
/* Medium Large devices */
@media (max-width: 1299px) {
  .hero-2 .hero-2-thumb {
    width: 730px;
  }
}
/* Large devices */
@media (max-width: 1199px) {
  .hero-style2 .hero-title {
    font-size: 70px;
  }
  .hero-2 .hero-2-thumb {
    width: 620px;
  }
  .hero-2 .hero-2-thumb {
    height: 667px;
  }
}
/* Medium devices */
@media (max-width: 991px) {
  .hero-2 .hero-2-thumb {
    height: 637px;
    width: 400px;
  }
  .hero-2 .hero-2-thumb img {
    height: 637px;
  }
}
/* Small devices */
@media (max-width: 767px) {
  .hero-style2 .hero-title {
    font-size: 50px;
  }
  .hero-2 .hero-2-thumb {
    height: 580px;
    width: 320px;
  }
  .hero-2 .hero-2-thumb img {
    height: 580px;
  }
  .hero-style2 .hero-contact-wrap {
    max-width: 246px;
  }
}
/* Extra small devices */
@media (max-width: 575px) {
  .hero-2 .hero-2-thumb {
    height: auto;
    width: 100%;
    position: inherit;
  }
  .hero-2 .hero-2-thumb img {
    height: auto;
  }
  .hero-style2 .hero-title {
    font-size: 40px;
  }
  .hero-style2 {
    padding: 80px 0 72px;
  }
  .hero-style2 .btn {
    margin-bottom: 33px;
  }
}
/* Extra small devices */
@media (max-width: 375px) {
  .hero-style2 .hero-title {
    font-size: 40px;
  }
}

/* Mobile: Button positioning to the right */
@media (max-width: 767px) {
  .hero-style2 .row {
    flex-direction: column;
  }
  .hero-style2 .col-lg-9 {
    width: 100%;
    max-width: 100%;
  }
  .hero-style2 .hero-subtile {
    text-align: center;
    margin-bottom: 20px;
  }
  .hero-style2 .col-xxl-4,
  .hero-style2 .col-xl-5,
  .hero-style2 .col-lg-6 {
    width: 100%;
    max-width: 100%;
    padding-left: 15px;
    padding-right: 15px;
  }
  .hero-style2 .hero-text {
    text-align: center;
    margin-bottom: 30px;
  }
  .hero-style2 .btn-group {
    justify-content: flex-end !important;
    display: flex !important;
    width: 100%;
    margin-top: 20px;
  }
  .hero-style2 .btn-group .btn {
    margin-left: auto !important;
  }
}
@media (max-width: 575px) {
  .hero-style2 .btn-group {
    justify-content: center !important;
  }
  .hero-style2 .btn-group .btn {
    margin-left: 0 !important;
  }
}

/* Hero 3 ---------------------------------- */
.hero-3 {
  background-image: -webkit-linear-gradient(to top, var(--smoke-color), var(--smoke-color));
  background-image: linear-gradient(to top, var(--smoke-color), var(--smoke-color));
  background-size: 100% calc(100% - 582px);
  background-repeat: no-repeat;
  /* Medium devices */
}
@media (max-width: 991px) {
  .hero-3 {
    background: transparent;
  }
}

.hero-style3 {
  padding: 140px 0 130px;
}
.hero-style3 .hero-title {
  font-size: 100px;
}
.hero-style3 .hero-3-thumb {
  margin-top: 38px;
  margin-bottom: 40px;
}
.hero-style3 .hero-text {
  margin-top: 22px;
  margin-bottom: 0;
}

/* Medium Large devices */
@media (max-width: 1399px) {
  .hero-style3 .hero-title {
    font-size: 80px;
  }
}
/* Large devices */
@media (max-width: 1199px) {
  .hero-style3 {
    padding: 160px 0 70px;
  }
  .hero-style3 .hero-title {
    font-size: 70px;
  }
}
/* Small devices */
@media (max-width: 767px) {
  .hero-style3 {
    padding: 140px 0 70px;
  }
  .hero-style3 .hero-title {
    font-size: 50px;
  }
  .hero-style3 .hero-3-thumb {
    margin-top: 18px;
    margin-bottom: 20px;
  }
}
/* Extra small devices */
@media (max-width: 575px) {
  .hero-style3 .hero-title {
    font-size: 40px;
  }
}
/* Extra small devices */
@media (max-width: 375px) {
  .hero-style3 .hero-title {
    font-size: 40px;
  }
}
/* Hero 4 ---------------------------------- */
.hero-4 {
  padding-bottom: 100px;
}
.hero-4 .hero-4-thumb {
  width: 42%;
  top: 210px;
  bottom: 0px;
  z-index: 1;
}
.hero-4 .hero-4-thumb img {
  height: 100%;
  object-fit: cover;
  width: 100%;
  display: block;
}

.hero-style4 {
  padding-top: 210px;
  padding-bottom: 80px;
}
.hero-style4 .hero-title {
  font-size: 100px;
  margin-bottom: 24px;
  line-height: 1.1em;
}
.hero-style4 .hero-text {
  margin-bottom: 36px;
}
/* ... */

